--- a/app/src/main/res/layout/fragment_finished_game.xml
+++ b/app/src/main/res/layout/fragment_finished_game.xml
@@ -72,6 +72,7 @@
         app:layout_constraintTop_toTopOf="parent" />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
+        android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/tag"
