--- a/app/src/main/res/layout/fragment_save_game.xml
+++ b/app/src/main/res/layout/fragment_save_game.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBar"
         android:layout_width="match_parent"
@@ -20,7 +22,6 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/tag"/>
 
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -34,78 +35,122 @@
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
 
-    <LinearLayout
-        android:layout_below="@+id/toolBar"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="10dp"
-        android:id="@+id/teamNamesLayout"
-        android:orientation="horizontal"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/base_cardview"
+        style="@style/Base.CardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_below="@id/toolBar">
 
-        <EditText
-            android:background="@null"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:id="@id/team1Name"
-            android:layout_weight="2"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:layout_marginStart="60dp"
-            android:inputType="text"
-            android:hint="@string/team_name"
-            android:autofillHints="" />
-        <EditText
-            android:background="@null"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:id="@id/team2Name"
-            android:layout_weight="2"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:layout_marginStart="20dp"
-            android:inputType="text"
-            android:hint="@string/team_name"
-            android:autofillHints="" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="@color/black"
 
-    </LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/base_cardview"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.511">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/fixed_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0">
+
+
+                <ImageButton
+                    android:background="@color/black"
+                    android:id="@+id/arrow_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_arrow_right"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/todo" />
+
+                <TextView
+                    android:visibility="gone"
+                    android:id="@+id/differenceText"
+                    style="@style/TextViewStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/difference_0"
+                    android:layout_marginStart="50dp"
+                    app:layout_constraintStart_toEndOf="@+id/arrow_button"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <LinearLayout
+                android:layout_margin="20dp"
+                android:id="@+id/layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fixed_layout">
+
+                <EditText
+                    android:background="@drawable/custom_edittext"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:id="@id/team1Name"
+                    android:padding="10dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:inputType="text"
+                    android:hint="@string/team1Name"
+                    android:autofillHints="" />
+
+                <EditText
+                    android:background="@drawable/custom_edittext"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:id="@id/team2Name"
+                    android:padding="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white"
+                    android:inputType="text"
+                    android:hint="@string/team2Name"
+                    android:autofillHints="" />
+
+                <Button
+                    android:id="@+id/saveTeamNames"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_margin="20dp"
+                    android:text="@string/save"/>
+
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+
+
 
     <LinearLayout
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:layout_below="@+id/teamNamesLayout"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <View
-            android:id="@+id/team1View"
-            android:layout_width="wrap_content"
-            android:layout_weight="2"
-            android:layout_height="5dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="60dp"
-            android:layout_marginEnd="10dp" />
-        <View
-            android:id="@+id/team2View"
-            android:layout_width="wrap_content"
-            android:layout_weight="2"
-            android:layout_height="5dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="20dp"
-           />
-
-    </LinearLayout>
-
-
-    <LinearLayout
+        android:visibility="invisible"
         android:id="@+id/scoreContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_below="@id/teamNamesLayout"
+        android:layout_below="@id/base_cardview"
         android:layout_marginTop="10dp"
         android:paddingTop="10dp"
         android:paddingEnd="10dp"
@@ -345,15 +390,16 @@
                 android:layout_weight="3"
                 android:autofillHints=""/>
         </LinearLayout>
+
+            <Button
+                android:layout_marginStart="60dp"
+                android:background="@drawable/custom_button"
+                android:id="@+id/saveGame"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/save_game" />
+
     </LinearLayout>
 
-    <Button
-        android:background="@drawable/custom_button"
-        android:id="@+id/saveGame"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_below="@id/scoreContainer"
-        android:layout_alignParentEnd="true"
-        android:text="@string/save_game" />
+
 </RelativeLayout>
