--- a/app/src/main/res/drawable/custom_edittext.xml
+++ b/app/src/main/res/drawable/custom_edittext.xml
@@ -6,7 +6,7 @@
         android:right="-2dp"
         android:top="-2dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/black" />
+            <solid android:color="#00000000" />
             <size android:height="1dp" />
             <stroke android:width="1dp" android:color="@color/white" />
         </shape>
