--- a/app/src/main/res/layout/finished_game_item.xml
+++ b/app/src/main/res/layout/finished_game_item.xml
@@ -4,15 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_margin="16dp"
     android:background="@drawable/custom_cardview"
-    android:padding="12dp">
+    android:layout_marginBottom="16dp"
+    android:padding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="12dp">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/team1Name"
@@ -76,9 +75,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="16dp"
 
         android:background="#FFFFFF"/>
     <LinearLayout
@@ -93,8 +90,7 @@
             android:text="@string/game_info"
             android:textColor="@color/white"
             android:textSize="12sp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="8dp"/>
 
 
         <TextView
@@ -103,10 +99,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/date"
-            android:textSize="6sp"
+            android:textSize="11sp"
             android:textStyle="bold"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="8dp"
             />
 
     </LinearLayout>
