--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,9 +14,9 @@
 
     <style name="EditTextStyle" parent="Widget.AppCompat.EditText" >
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingStart">10dp</item>
-        <item name="android:layout_marginStart">10dp</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:layout_marginStart">8dp</item>
         <item name="android:padding">5dp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/white</item>
@@ -36,9 +36,13 @@
     <style name="TextViewStyle" parent="Widget.AppCompat.TextView">
         <item name="android:textColor">@color/white</item>
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">48dp</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:layout_weight">4</item>
+        <item name="android:layout_weight">2</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">bottom</item>
+        <item name="android:layout_marginBottom">5dp</item>
 
     </style>
 
@@ -47,7 +51,16 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:layout_marginBottom">8dp</item>
+
+    </style>
+
+    <style name="VerticalLinearLayoutSeperatorStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">20dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_weight">3</item>
+
     </style>
 
     <style name="MyCardViewStyle" parent="Widget.MaterialComponents.CardView">
