--- a/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".ui.finishedGameDetail.FinishedGameDetailFragment">
+    tools:context=".ui.finishedPartnerGameDetail.FinishedGameDetailFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBar"
