--- a/app/src/main/res/layout/fragment_save_single_game.xml
+++ b/app/src/main/res/layout/fragment_save_single_game.xml
@@ -9,7 +9,7 @@
     tools:context=".ui.finishedSingleGame.FinishedSingleGameFragment">
 
     <LinearLayout
-        android:id="@+id/nameLayout"
+        android:id="@+id/nameEntryLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -71,6 +71,32 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/namesLayout"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/confirmNames">
+
+        <include
+            android:id="@+id/names"
+            layout="@layout/single_game_round_item" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/totalScoresLayout"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/namesLayout">
+        <include
+            android:id="@+id/totalScores"
+            layout="@layout/single_game_round_item" />
+    </LinearLayout>
+
+    <LinearLayout
         android:visibility="gone"
         android:id="@+id/scoreLayout"
         android:layout_width="match_parent"
@@ -79,11 +105,8 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confirmNames">
-
-
+        app:layout_constraintTop_toBottomOf="@+id/totalScoresLayout">
     </LinearLayout>
-
 
     <Button
         android:id="@+id/confirmNames"
@@ -93,7 +116,7 @@
         android:background="@drawable/custom_button"
         android:text="@string/save_names"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/nameEntryLayout" />
 
     <Button
         android:id="@+id/newRound"
