--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,13 +13,13 @@
 
         <action
             android:id="@+id/action_saveGameFragment_to_finishedGameFragment"
-            app:destination="@id/finishedGameFragment"
+            app:destination="@id/finishedPartnerGameFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             />
     </fragment>
     <fragment
-        android:id="@+id/finishedGameFragment"
+        android:id="@+id/finishedPartnerGameFragment"
         android:name="com.keremkulac.okeyscore.ui.finishedPartnerGame.FinishedPartnerGameFragment"
         android:label="fragment_finished_game"
         tools:layout="@layout/fragment_finished_partner_game" >
@@ -27,22 +27,9 @@
             android:id="@+id/action_finishedGameFragment_to_saveGameFragment"
             app:destination="@id/savePartnerGameFragment" />
         <action
-            android:id="@+id/action_finishedGameFragment_to_finishedGameDetailFragment"
-            app:destination="@id/finishedGameDetailFragment" >
-            <argument
-                android:name="finishedGameID"
-                app:argType="integer" />
-        </action>
+            android:id="@+id/action_finishedPartnerGameFragment_to_finishedGameDetailFragment"
+            app:destination="@id/finishedGameDetailFragment" />
 
-    </fragment>
-    <fragment
-        android:id="@+id/finishedGameDetailFragment"
-        android:name="com.keremkulac.okeyscore.ui.finishedGameDetail.FinishedGameDetailFragment"
-        android:label="fragment_finished_game_detail"
-        tools:layout="@layout/fragment_finished_game_detail" >
-        <action
-            android:id="@+id/action_finishedGameDetailFragment_to_finishedGameFragment"
-            app:destination="@id/finishedGameFragment" />
     </fragment>
     <fragment
         android:id="@+id/finishedSingleGameFragment"
@@ -60,9 +47,21 @@
         <action
             android:id="@+id/action_finishedGameViewFragment_to_savePartnerGameFragment"
             app:destination="@id/savePartnerGameFragment" />
+        <action
+            android:id="@+id/action_finishedGameViewFragment_to_finishedGameDetailFragment"
+            app:destination="@id/finishedGameDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/saveSingleGameFragment"
         android:name="com.keremkulac.okeyscore.ui.saveSingleGame.SaveSingleGameFragment"
         android:label="SaveSingleGameFragment" />
+    <fragment
+        android:id="@+id/finishedGameDetailFragment"
+        android:name="com.keremkulac.okeyscore.ui.finishedPartnerGameDetail.FinishedGameDetailFragment"
+        android:label="fragment_finished_partner_game_detail"
+        tools:layout="@layout/fragment_finished_partner_game_detail" >
+        <argument
+            android:name="finishedGameID"
+            app:argType="integer" />
+    </fragment>
 </navigation>
